yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notypie-ui
  namespace: notypie-dev
  labels:
    app: notypie-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - notypie.dev
      secretName: notypie-dev-tls
  rules:
    - host: notypie.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: notypie-ui
                port:
                  number: 3000
